@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-20T08:15:59Z",
-  "count_outdated" : 344,
-  "uniques_outdated" : 185,
-  "count" : 373,
-  "uniques" : 202,
+  "timestamp" : "2022-06-21T01:00:55Z",
+  "count_outdated" : 347,
+  "uniques_outdated" : 187,
+  "count" : 376,
+  "uniques" : 203,
   "clones" : [
-    {
-      "timestamp": "2022-06-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
