@@ -1,3 +1,10 @@
+2022-06-21T01:00:55Z:
+* notice: last 14d: unq all: 3 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 185 344 / 202 373
+* notice: next accum: outdated-unq outdated-all / unq all: 187 347 / 203 376
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-06] / [2022-06-20]
+
 2022-06-20T08:15:59Z:
 * notice: last 14d: unq all: 3 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 185 344 / 201 373
